--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --inspect 2992 app.js",
-    "start:dev": "nodemon app.js"
+    "build": "tsc",
+    "start:dev": "nodemon --ext ts --exec ts-node ./src/app.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5"
